# gzh-ai-layout-tool

./: .gitignore  CLAUDE.md  README.md  SOURCE_INDEX.md  eslint.config.js  gzh_tool_design_v3.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
assets/: WriterEditor-DnmyJDIb.js  index-BAsqLZaN.css  index-CXnvziEy.js  index-DPmLAnV3.js
docs/: first-version-acceptance.md  v13-phase0-audit.md
e2e/: webkit-smoke.spec.ts
src/: App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AppBoundary.test.tsx  AppBoundary.tsx  BlockMetaExtension.test.ts  BlockMetaExtension.ts  ConfirmDialog.tsx  EditorBoundary.tsx  EditorInsertTools.tsx  ImageGridExtension.tsx  KeywordMarkExtension.ts  LayoutEditor.tsx  RichTextToolbar.tsx  SettingsModal.tsx  StyleExtractDialog.tsx  TableTools.tsx  WriterEditor.tsx  editorShared.test.ts  editorShared.ts
src/domain/: aiClient.test.ts  aiClient.ts  aiLayout.ts  aiLayoutSchema.test.ts  aiLayoutSchema.ts  aiSettings.test.ts  aiSettings.ts  aiWriting.test.ts  aiWriting.ts  articleFetch.test.ts  articleFetch.ts  blockOverrides.test.ts  blockOverrides.ts  clipboard.test.ts  clipboard.ts  colorMath.test.ts  colorMath.ts  customStyles.test.ts  customStyles.ts  darkPreviewTransform.test.ts  darkPreviewTransform.ts  decorations.test.ts  draftLibrary.test.ts  draftLibrary.ts  draftStore.test.ts  draftStore.ts  feedback.test.ts  feedback.ts  (+40 more)
(+2 files in other folders)
