[package]
name = "gzh-ai-layout-tool"
version = "0.1.0"
description = "公众号AI排版器"
authors = ["local"]
edition = "2021"

[lib]
name = "gzh_ai_layout_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
